# trying_fast_api

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_trying_fast_api.py
thunder-tests/: thunderCollection.json  thunderEnvironment.json  thunderclient.json
trying_fast_api/: data.py  main.py  server.py
