[tool.poetry]
name = "trying_fast_api"
version = "0.1.0"
description = ""
authors = ["Thiago Salles <tsmlima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
